on model open shift left resolved
on model open shift left resolved

--- a/theme/assets/css/custom.css
+++ b/theme/assets/css/custom.css
@@ -52,3 +52,6 @@ margin: 0 10px 0 10px;
 .top-menu-item:hover, .top-menu-item:visited, .top-menu-item:active {
 color: #fff; 
 } 
+.modal-open[style] {
+padding-right: 0px !important;
+}
